[tool.poetry]
name = "ipor-fusion-sdk-python"
version = "0.1.0"
description = ""
authors = ["adam@ipor.io"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
eth-typing = "5.0.0"
eth-abi = "5.1.0"
web3 = "7.2.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.2"
testcontainers = "4.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
